# robot-stepper-actuator

./: .gitignore  .gitmodules  CMakeLists.txt
components/as5600/: CMakeLists.txt
components/as5600/include/: as5600.h
components/as5600/src/: as5600.c
components/pid/: CMakeLists.txt
components/pid/include/: pid.h
components/pid/src/: pid.c
components/stepper/: CMakeLists.txt
components/stepper/include/: stepper.h
components/stepper/src/: stepper.c
include/: actuator.h  config.h  joint_1.h  joint_2.h  joint_3.h  joint_4.h  macros.h
main/: CMakeLists.txt  home.c  home.h  main.c
